Switched to stand-alone admin layout and got jQuery UI tabs to work.

--- a/css/slatwall_admin.css
+++ b/css/slatwall_admin.css
@@ -1,6 +1,6 @@
 body	{background-image:none;}
 
-div.admincontainer		{margin: 0 10px;}
+div.admincontainer		{margin: 60px 20px;}
 div.admincontainer h1	{position:relative; background:none; color:#000000; text-indent: 0px; clear:both; float:none;}
 img.slatwallLogo	{float:right;}
 
