Basic product type admin finished.

--- a/css/slatwall_admin.css
+++ b/css/slatwall_admin.css
@@ -4,3 +4,14 @@ div.admincontainer		{margin: 60px 20px;}
 div.admincontainer h1	{position:relative; background:none; color:#000000; text-indent: 0px; clear:both; float:none;}
 img.slatwallLogo	{float:right;}
 
+table#productTypes {
+	width: 850px;
+}
+
+table#productTypes ul {
+	background-image: none;
+}
+
+table#productTypes ul.neston {
+	font-weight: bold;
+}
