--- a/css/slatwall_admin.css
+++ b/css/slatwall_admin.css
@@ -7,18 +7,27 @@ img.slatwallLogo	{
  	margin: 4px 100px 0 50px;
 }
 
-button {
-	background-color: #69c;
+a.button, button {
+	background-color: #78A8D4;
 	vertical-align: middle;
 	/*padding: 0;*/
 	width: auto;
 	border: 0 solid #fff;
 	cursor: pointer;
 	color: #fff;
-	padding: .4em .6em;
+	padding: 3px 6px;
 	border-radius: 3px;
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
+}
+
+a.button {
+	padding: 4px 6px 3px;
+	margin-right: 10px;
+}
+
+a.button:hover {
+	text-decoration: none;
 }
 
 .admincontainer fieldset {
