--- a/css/slatwall_admin.css
+++ b/css/slatwall_admin.css
@@ -79,6 +79,19 @@ table#ProductBrands {
 	width: 800px;
 }
 
+dl.optionDetail {
+	margin-bottom: 20px;
+}
+
+ul#optionList {
+	margin: 20px 0 0 10px;
+}
+
+ul#optionList li {
+	margin-bottom: 5px;
+}
+
+
 #shadowbox_container {
 	z-index: 499997;
 }
