Finished product product option admin.

--- a/css/slatwall_admin.css
+++ b/css/slatwall_admin.css
@@ -30,6 +30,11 @@ a.button:hover {
 	text-decoration: none;
 }
 
+
+div#buttons {
+	margin-bottom: 10px;	
+}
+
 a.buttonOff {
 	background-color: #cccccc;
 	vertical-align: middle;
