--- a/css/slatwall_admin.css
+++ b/css/slatwall_admin.css
@@ -16,6 +16,7 @@ a.button, button {
 	background-color: #78A8D4;
 	vertical-align: middle;
 	/*padding: 0;*/
+	margin-left: 3px;
 	width: auto;
 	border: 0 solid #fff;
 	cursor: pointer;
@@ -28,7 +29,7 @@ a.button, button {
 
 a.button {
 	padding: 4px 6px;
-	margin-right: 10px;
+	margin-left: 3px;
 }
 
 a.button:hover {
@@ -44,10 +45,8 @@ div#createProductForm {
 	width: 930px;
 }
 
-div.createProductButtons {
-	margin: 20px 0 10px;
-	text-align: right;
-	clear: left;
+div.optionsSelector {
+	margin-bottom: 10px;
 }
 
 a.buttonOff {
