--- a/css/slatwall_admin.css
+++ b/css/slatwall_admin.css
@@ -90,6 +90,10 @@ table#productTypes ul.neston {
 	font-weight: bold;
 }
 
+table#productTypeSettings {
+	width: 600px;
+}
+
 table#Options, table#ProductSettings, table#ProductBrands {
 	width: 800px;
 }
