--- a/css/slatwall_admin.css
+++ b/css/slatwall_admin.css
@@ -74,6 +74,11 @@ a.button:hover {
 	text-decoration: none;
 }
 
+div.svoadminproductdetail {
+	width: 920px;
+	margin: 0;
+	padding: 0;
+}
 
 div#buttons {
 	margin-bottom: 10px;	
