Finished basic UI for jQuery-driven  adding/removing new SKU's in product edit form.

--- a/css/slatwall_admin.css
+++ b/css/slatwall_admin.css
@@ -241,5 +241,9 @@ p.error_message {
 	color: #8a1f11;
 }
 
+.hideElement {
+	display:none;
+}
+
 div.svoadminproductdetail img.skuImage {float:right;}
 /* @end */
