--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -51,7 +51,13 @@ div.svocommontoolbarmenu ul.home {
 	float:left;
 	background: url(../images/common.toolbar.menu_bg.gif) repeat-x bottom left;
 }
-
+div.svocommontoolbarmenu ul.home li ul {
+	position: absolute;
+	bottom:30px;
+	background: #7D7D7D;
+    height: auto;
+	width: 140px;
+}
 div.svocommontoolbarmenu ul.favorites {
 	height:30px;
 	float:left;
