Added ability to sort and delete attribute options (Issue #48)

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -156,6 +156,10 @@ table#ProductList {
 	width: 900px;
 }
 
+table.attributeOptions {
+	width: 200px;
+}
+
 table .alignLeft {
 	text-align: left;
 }
