Display of product pages in nested view. (Issue #47)

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -136,11 +136,11 @@ table#productTypes {
 	width: 850px;
 }
 
-table#productTypes ul {
+table#productTypes ul, table#productPages ul {
 	background-image: none;
 }
 
-table#productTypes ul.neston {
+table#productTypes ul.neston, table#productPages ul.neston {
 	font-weight: bold;
 }
 
