Sku image filename is now a persistent property (Issue #95)

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -76,8 +76,8 @@ a.button:hover {
 	text-decoration: none;
 }
 
-div.svoadminproductdetail {
-	width: 920px;
+div.svoadminproductdetail form {
+	width: 100%;
 	margin: 0;
 	padding: 0;
 }
