--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -62,7 +62,6 @@ div.svocommontoolbarmenu ul.home li ul {
 div.svocommontoolbarmenu ul.favorites {
 	height:30px;
 	float:left;
-	background: url(../images/common.toolbar.menu_darkbg.gif) repeat-x bottom left;
 }
 
 div.svocommontoolbarmenu ul {
@@ -77,16 +76,14 @@ div.svocommontoolbarmenu li {
 	position:relative;
 	margin:0px;
 	padding:0px;
-	height:30px;
 }
 div.svocommontoolbarmenu li a {
-	display:block;
+	display:block !important;
 	margin:0px;
 	padding:7px 12px 0px 20px;
-	height:30px;
 	color:#ffffff;
-	text-shadow: rgba(0, 0, 0, .80) 0px -1px 0px;
 	text-indent: 14px;
+	text-shadow: rgba(0, 0, 0, .80) 0px -1px 0px;
 	font-size:11px;
 }
 
@@ -98,21 +95,78 @@ div.svocommontoolbarmenu li:hover a {
 div.svocommontoolbarmenu li ul {
 	display:none;
 }
+
 div.svocommontoolbarmenu ul.favorites li ul li {
-	background-image:none;
+	float: left !important;
+	width: 100% !important; /* width needed or else Opera goes nuts */
+	padding: 0 !important;
+	margin: 0 !important;
+	border-bottom: 1px dotted #666;
+	background: none;
+	color: #fff !important;
 }
+
 div.svocommontoolbarmenu li ul li a {
-	background-image:none;
-	margin:0px;
 	padding:0px;
+	width: 11em !important;
+	padding: 4px 0 4px 14px !important;
+	text-indent: 0px;
+	margin: 1px 0 !important;
+	line-height: 1.2 !important;
+	background: url(../images/arrow_dk_grey.gif) no-repeat 3px center !important;
+	color: #333 !important;
+	text-shadow: rgba(255,255,255,.30) 0px 1px 0px;
 }
+
 div.svocommontoolbarmenu ul.favorites li:hover ul {
 	display:block;
-	position: absolute;
-	bottom:30px;
-	background: #7D7D7D;
-    height: auto;
-	width: 140px;
+	bottom:20px;
+	width: 140px !important;
+	padding: 0.5em 0.5em 0 0.5em !important;
+	margin: 11px 0 0 6px !important;
+	list-style: none !important;
+	line-height: 1 !important;
+	background-image: none !important;
+	position: absolute !important;
+	background: #999 !important;
+	height: auto !important;
+	opacity: .98;
+	-moz-opacity: .98;
+	filter: alpha(opacity=98); /* Move to ie.css? */
+	-moz-border-radius-topleft: 5px;
+	-webkit-border-top-left-radius: 5px;
+	-moz-border-radius-topright: 5px;
+	-webkit-border-top-right-radius: 5px;
+	-webkit-box-shadow: 2px 2px 5px #666;
+	-moz-box-shadow: 3px 3px 5px #555;
+	box-shadow: 3px 3px 3px #555 !important;
+	color:#fff !important;
+}
+
+div.svocommontoolbarmenu ul.favorites li li a:hover {
+	background: url(../images/arrow_grey.gif) no-repeat 3px center !important;
+	color: #fff !important;
+	text-shadow: rgba(0,0,0,.60) 0px -1px 0px;
+	
+}
+
+div.svocommontoolbarmenu ul.favorites li:hover ul a:hover, div.svocommontoolbarmenu ul.favorites li.sfhover ul a:hover { 
+	color: #fff !important;
+	text-shadow: rgba(0,0,0,.60) 0px -1px 0px;
+	background: url(../images/arrow_grey.gif) no-repeat 3px center !important;
+}
+
+div.svocommontoolbarmenu ul.favorites li ul li.last {
+	border-bottom: none;
+}
+
+div.svocommontoolbarmenu ul.favorites li:hover ul, div.svocommontoolbarmenu ul.favorites li.sfhover ul {
+	left: auto !important;
+	z-index: 2 !important;
+}
+
+div.svocommontoolbarmenu ul.favorites li li:last-child {
+	border-bottom: none !important;
 }
 
 div.svocommontoolbarmenu ul li#search input {
