--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -41,7 +41,7 @@ Notes:
 body	{background-image:none;}
 
 h1 {
-    background: url("../images/mura_logo.png") no-repeat scroll 0 0 transparent;
+    background: url("../images/admin.default.mura_logo.png") no-repeat scroll 0 0 transparent;
     color: #FEE100;
     float: left;
     height: 53px;
@@ -241,15 +241,15 @@ p.messagebox {
 }
 
 p.info_message {
-	background: #D1E6EF url(../../images/icons/cmsg.gif) no-repeat scroll .5em 50%;
+	background: #D1E6EF url(../images/admin.ui.msg_redcheck.gif) no-repeat scroll .5em 50%;
 }
 
 p.warning_message {
-	background: #FFF2CF url(../../images/icons/wmsg.gif) no-repeat scroll .5em 50%;
+	background: #FFF2CF url(../images/admin.ui.msg_warning.gif) no-repeat scroll .5em 50%;
 }
 
 p.error_message {
-	background: #FFFFE0 url(../../images/icons/emsg.gif) no-repeat scroll .5em 50%;
+	background: #FFFFE0 url(../images/admin.ui.msg_error.gif) no-repeat scroll .5em 50%;
 }
 
 /**************************************************************/
