--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -143,7 +143,7 @@ a.buttonOff:hover {
 	color: #FF3A00;
 }
 
-input.adminordersaveactions {
+input.adminorderapplyactions {
 	float: right;
 	margin-bottom: 10px;
 }
