--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -107,7 +107,8 @@ div.svoadminorderdetail .totals {
 	margin: 0 0 0 20px;
 }
 
-div#buttons {
+div.buttons {
+	height: 15px;
 	margin-bottom: 10px;	
 }
 
@@ -136,6 +137,10 @@ a.buttonOff {
 
 a.buttonOff:hover {
 	text-decoration: none;
+}
+
+a.adminorderdetailorderfulfillment {
+	float:right;
 }
 
 .admincontainer fieldset {
