--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -181,11 +181,15 @@ table#productTypes {
 	width: 850px;
 }
 
-table#productTypes ul, table#productPages ul {
+table#productTypes ul, 
+table#productPages ul,
+table#productCategories ul {
 	background-image: none;
 }
 
-table#productTypes ul.neston, table#productPages ul.neston {
+table#productTypes ul.neston, 
+table#productPages ul.neston,
+table#productCategories ul.neston {
 	font-weight: bold;
 }
 
