--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -50,18 +50,12 @@ div.svocommontoolbarmenu {
 div.svocommontoolbarmenu ul.home {
 	height:30px;
 	float:left;
-	background: url(../images/common.toolbar.menu_bg.gif) repeat-x bottom left;
 }
-div.svocommontoolbarmenu ul.home li ul {
-	position: absolute;
-	bottom:30px;
-	background: #7D7D7D;
-    height: auto;
-	width: 140px;
-}
+
 div.svocommontoolbarmenu ul.favorites {
 	height:30px;
 	float:left;
+	background: url(../images/common.toolbar.menu_darkbg.gif) repeat-x bottom left;
 }
 
 div.svocommontoolbarmenu ul {
@@ -106,7 +100,7 @@ div.svocommontoolbarmenu ul.favorites li ul li {
 	color: #fff !important;
 }
 
-div.svocommontoolbarmenu li ul li a {
+div.svocommontoolbarmenu ul.favorites li ul li a {
 	padding:0px;
 	width: 11em !important;
 	padding: 4px 0 4px 14px !important;
@@ -211,4 +205,37 @@ div.svocommontoolbarmenu li#navAccounts>a {
 
 div.svocommontoolbarmenu li#navSettings>a {
 	background: url("/admin/images/icons/confg_24.png") no-repeat scroll 15px 7px transparent !important;
+}
+
+div.svocommontoolbarmenu li#mainMenu ul.menu {
+	position: absolute;
+	bottom:30px;
+	height: auto;
+	width: 260px;
+	padding:20px 0px 80px 0px;
+	background-color:#666666;
+	-moz-border-radius-topright: 15px;
+	-webkit-border-top-right-radius: 15px;
+}
+
+div.svocommontoolbarmenu li#mainMenu ul.menu li {
+	background-color:#666666;
+	background-image:url(../images/common.toolbar.menu.arrow_white.png);
+	background-position-x:240px;
+	background-position-y:18px;
+	background-repeat:no-repeat;
+}
+
+div.svocommontoolbarmenu li#mainMenu ul.menu li:hover {
+	background-color:#4f4f4f;
+}
+
+div.svocommontoolbarmenu li#mainMenu ul.menu li a {
+	display:block;
+	width: 200px;
+	padding: 15px 30px 15px 30px;
+	font-size:16px;
+	color:#ffffff;
+	text-shadow:none;
+	font-weight:bold;
 }
